--- a/about.html
+++ b/about.html
@@ -6,8 +6,8 @@
   <body>
     <h1>about</h1>
     <p>This site is a sample project
-      for the <strong>awsome</strong> Git tutorial <em>Learn Enough™ Git
-        to Be Dangerous</em>.
+      for the <strong>awsome</strong> Git tutorial <a href="http://learnenough.com/git-tutorial"><em>Learn Enough™ Git
+        to Be Dangerous</em></a>.
     </p>
   </body>
 </html>
