--- a/about.html
+++ b/about.html
@@ -9,5 +9,6 @@
       for the <strong>awsome</strong> Git tutorial<a href="http://learnenough.com/git-tutorial"> <em>Learn Enough™ Git
         to Be Dangerous</em></a>.
     </p>
+    <img src="images/polar_bear.jpg" alt="Polar bear">
   </body>
 </html>
