--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>About</h1>
+    <a href="index.html"><strong>Accueil</strong></a>
     <p>This site is a sample project
       for the <strong>awsome</strong> Git tutorial<a href="http://learnenough.com/git-tutorial"> <em>Learn Enough™ Git
         to Be Dangerous</em></a>.
